--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.2.0",
-    "firebase": "^10.14.1",
+    "@google/genai": "^0.1.0",
+    "firebase": "^10.13.1",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.1.0",
-    "react-router-dom": "^6.30.2",
-    "recharts": "^2.12.7",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.26.2",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
