--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.1.0",
+    "@google/genai": "latest",
     "firebase": "^10.13.1",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
