--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "npx ts-node ./scripts/generate-sitemap.ts",
+    "build:all": "tsc && vite build && npm run generate-sitemap",
+    "build:deploy": "npm run build:all"
   },
   "dependencies": {
-    "@google/genai": "latest",
+    "dotenv": "^17.2.3",
     "firebase": "^10.13.1",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
@@ -27,6 +30,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "vite": "^5.4.8"
   }
