--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "routes": [
-    { "src": "/sitemap.xml", "dest": "/dist/sitemap.xml" },
-    { "src": "/blog/(.*)", "dest": "/" },           // ← ADD THIS LINE
-    { "src": "/(.*)", "dest": "/" }                 // ← fallback for all other routes
-  ]
-}
+    "rewrites": [
+      { "source": "/sitemap.xml", "destination": "/dist/sitemap.xml" },
+      { "source": "/(.*)", "destination": "/" }
+    ]
+  }
