fix: move dotenv to dependencies for Vercel

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.16.1",
+    "dotenv": "^17.2.3",
     "firebase": "^10.13.1",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
