--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
-    "rewrites": [
-      { "source": "/sitemap.xml", "destination": "/dist/sitemap.xml" },
-      { "source": "/(.*)", "destination": "/" }
-    ]
-  }
+  "rewrites": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/Api/sitemap.ts"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ]
+}
