Add remaining changes

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "rewrites": [
-    { "source": "/sitemap.xml", "destination": "/Api/sitemap.ts" },
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml" 
+    }
   ]
 }
