--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "firebase": "^10.13.1",
+    "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "sitemap": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
