--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
   "rewrites": [
     {
+      
       "source": "/sitemap.xml",
-      "destination": "/sitemap.xml" 
+      "destination": "/pages/sitemap.xml" 
+    },
+    {
+    
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
