--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
-
-
 {
   "rewrites": [
     {
@@ -9,7 +7,7 @@
   ],
   "builds": [
     {
-      "src": "api/*.ts",
+      "src": "api/sitemap.xml.ts",
       "use": "@vercel/node"
     }
   ]
