--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,12 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    
+    // ⭐ VITAL FIX: Use NodeNext for Serverless/Node.js module resolution
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext", 
+    
     "skipLibCheck": true,
-    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -15,9 +18,15 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "types": ["vite/client"],
     
-    // ⭐ TEMPORARY ADJUSTMENT TO BYPASS PERSISTENT TS1345 ERROR ⭐
+    // ⭐ ADDED 'node' types for Serverless functions
+    "types": ["vite/client", "node"], 
+    
+    // Settings for import compatibility
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    
+    // Original temporary setting
     "strictBindCallApply": false 
   },
   "include": ["**/*.ts", "**/*.tsx"],
