--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,9 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    
-    // ⭐ VITAL FIX: Use NodeNext for Serverless/Node.js module resolution
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext", 
-    
+    "module": "ESNext",
     "skipLibCheck": true,
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -18,15 +15,10 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
+    "types": ["vite/client"],
     
-    // ⭐ ADDED 'node' types for Serverless functions
-    "types": ["vite/client", "node"], 
     
-    // Settings for import compatibility
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    
-    // Original temporary setting
+    // ⭐ TEMPORARY ADJUSTMENT TO BYPASS PERSISTENT TS1345 ERROR ⭐
     "strictBindCallApply": false 
   },
   "include": ["**/*.ts", "**/*.tsx"],
