--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.454.0",
+    "next": "^16.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
@@ -25,8 +26,6 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vercel/build-utils": "^13.2.1",
-    "@vercel/node": "^5.5.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
