--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "firebase": "^9.23.0",
+    "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.454.0",
-    "next": "^16.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
@@ -26,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vercel/node": "^5.5.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
