--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build": "node scripts/generate-sitemap.js && vite build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
