--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-"build": "tsc && node scripts/generate-sitemap.js && vite build",
+    "build": "tsc, deploy && vite build",
     "preview": "vite preview"
     
   },
