--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
-  "dev": {
-    "port": 3000
-  },
+  "version": 2,
   "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    },
     {
       "src": "api/**/*.js",
       "use": "@vercel/node"
@@ -12,6 +17,10 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
