--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
- "scripts": {
-  "dev": "vite",
-  "build": "tsc && node scripts/generate-sitemap.js && vite build",
-  "preview": "vite preview",
-  
-  "build:deploy": "npm run build",
-  "vercel-build": "npm run build"
-},
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.454.0",
+    "next": "^16.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
@@ -28,12 +26,10 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vercel/node": "^5.5.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.8"
+    "typescript": "^5.5.3"
   }
 }
