--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,11 @@
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    },
+    {
+      "buildCommand": "npm run build",
+      "outputDirectory": "dist",
+      "framework": null
     }
   ]
 }
