--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@vercel/blob": "^2.0.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.454.0",
