--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,34 @@
 {
- "functions": {
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": null,
+  "devCommand": "npm run dev",
+
+  "functions": {
     "api/sitemap.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node@20.x"
     }
   },
+
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "source": "/sitemap.xml",
+      "destination": "/api/sitemap.xml"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+
+  "headers": [
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        { "key": "Content-Type", "value": "application/xml" },
+        { "key": "Cache-Control", "value": "s-maxage=3600, stale-while-revalidate" }
+      ]
     }
   ]
 }
-
