--- a/vercel.json
+++ b/vercel.json
@@ -1,34 +1,17 @@
 {
-  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": null,
   "devCommand": "npm run dev",
 
-  "functions": {
-    "api/sitemap.ts": {
-      "runtime": "@vercel/node@20.x"
-    }
-  },
-
   "rewrites": [
     {
       "source": "/sitemap.xml",
-      "destination": "/api/sitemap.xml"
+      "destination": "/api/sitemap"
     },
     {
       "source": "/(.*)",
       "destination": "/index.html"
-    }
-  ],
-
-  "headers": [
-    {
-      "source": "/sitemap.xml",
-      "headers": [
-        { "key": "Content-Type", "value": "application/xml" },
-        { "key": "Cache-Control", "value": "s-maxage=3600, stale-while-revalidate" }
-      ]
     }
   ]
 }
