--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react-helmet-async": "^2.0.5",
     "@google/generative-ai": "^0.21.0",
     "@vercel/blob": "^2.0.0",
     "firebase": "^10.14.1",
