--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-helmet-async": "^2.0.5",
+    "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.21.0",
     "@vercel/blob": "^2.0.0",
     "firebase": "^10.14.1",
@@ -18,6 +18,7 @@
     "next": "^16.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
