--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/blob": "^2.0.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
+    "googleapis": "^167.0.0",
     "lucide-react": "^0.454.0",
     "next": "^16.0.6",
     "react": "^18.3.1",
