fix: Resolve @vercel/node TS error and update sitemap error handling

--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,19 @@
   "devCommand": "npm run dev",
 
   "redirects": [
-  
     {
-      "source": "https://www.bigyann.com.np/(.*)",
-      "destination": "https://bigyann.com.np/$1",
+      "source": "/(.*)", 
+      "has": [
+        {
+          "type": "host",
+          "value": "www.bigyann.com.np"
+        }
+      ],
+      "destination": "https://bigyann.com.np/$1", 
       "statusCode": 301
     },
-    
+
+   
     {
       "source": "/",
       "destination": "/.",
