--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.21.0",
     "@splidejs/react-splide": "^0.7.12",
+    "@vercel/blob": "^2.0.0",
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
