--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+
+  "engines": {
+    "node": "20.x"
+  },
+
   "scripts": {
     "dev": "vite",
     "build": "npm run build:sitemap && tsc && vite-react-ssg build",
@@ -10,6 +15,7 @@
     "preview": "vite preview",
     "start:api": "ts-node src/api-server/index.ts"
   },
+
   "dependencies": {
     "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.21.0",
@@ -36,8 +42,9 @@
     "sitemap": "^9.0.0",
     "slick-carousel": "^1.8.1"
   },
+
   "devDependencies": {
-    "@types/node": "^24.10.2",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
