--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-
   "engines": {
     "node": "20.x"
   },
-
   "scripts": {
     "dev": "vite",
     "build": "npm run build:sitemap && tsc && vite-react-ssg build",
@@ -15,11 +13,11 @@
     "preview": "vite preview",
     "start:api": "tsx src/api-server/index.ts"
   },
-
   "dependencies": {
     "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.21.0",
     "@splidejs/react-splide": "^0.7.12",
+    "@unhead/react": "^2.0.19",
     "@vercel/blob": "^2.0.0",
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
@@ -31,7 +29,6 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.31.0",
@@ -42,7 +39,6 @@
     "sitemap": "^9.0.0",
     "slick-carousel": "^1.8.1"
   },
-
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
@@ -52,9 +48,9 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.3",
     "vite": "^5.4.0",
-    "vite-react-ssg": "^0.8.9",
-    "tsx": "^4.19.2"
+    "vite-react-ssg": "^0.8.9"
   }
 }
