--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^1.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.31.0",
