--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
     "@types/node": "^24.10.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
