--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.21.0",
     "@splidejs/react-splide": "^0.7.12",
+    "@vercel/node": "^5.5.16",
     "compression": "^1.8.1",
     "express": "^4.18.2",
     "fast-xml-parser": "^5.3.2",
