fix: Resolve @vercel/node TS error and update sitemap error handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,27 @@
 {
   "version": 2,
-
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-
-  "functions": {
-    "api/ssr.ts": {
-      "runtime": "nodejs24.x"
-    }
-  },
+  "framework": null,
+  "devCommand": "npm run dev",
 
   "redirects": [
     {
-      "source": "/(.*)",
+      "source": "/(.*)", 
       "has": [
         {
           "type": "host",
           "value": "www.bigyann.com.np"
         }
       ],
-      "destination": "https://bigyann.com.np/$1",
+      "destination": "https://bigyann.com.np/$1", 
       "statusCode": 301
     },
+
+   
+
+
+    
     {
       "source": "/blog/fm3g9qgx4JGycFGkc3M3",
       "destination": "/blog/samsung-galaxy-a24-price-in-nepal",
@@ -29,14 +29,14 @@
     }
   ],
 
-  "routes": [
+  "rewrites": [
     {
-      "src": "^/(assets|favicon|robots.txt|sitemap.xml)(/.*)?$",
-      "dest": "/$1$2"
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml"
     },
     {
-      "src": "^/(.*)$",
-      "dest": "/api/ssr"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
 
@@ -60,10 +60,6 @@
         {
           "key": "Content-Type",
           "value": "text/plain"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, s-maxage=3600"
         }
       ]
     }
