--- a/package.json
+++ b/package.json
@@ -7,21 +7,16 @@
     "dev": "vite",
     "build": "npm run build:sitemap && tsc && vite build",
     "build:sitemap": "npx ts-node api/update-public-sitemap.ts",
-    "preview": "tsx server.js",
-    "start": "tsx server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.21.0",
     "@splidejs/react-splide": "^0.7.12",
-    "@vercel/node": "^5.5.16",
-    "compression": "^1.8.1",
-    "express": "^4.18.2",
     "fast-xml-parser": "^5.3.2",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
     "googleapis": "^167.0.0",
-    "helmet": "^8.1.0",
     "lucide-react": "^0.454.0",
     "next": "^16.0.7",
     "react": "^18.3.1",
@@ -38,7 +33,6 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/compression": "^1.8.1",
     "@types/node": "^24.10.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -51,7 +45,6 @@
     "sitemap-ts": "^1.10.1",
     "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
-    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
