--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "firebase-admin": "^13.6.0",
     "googleapis": "^167.0.0",
     "lucide-react": "^0.454.0",
-    "next": "^16.1.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-helmet-async": "^2.0.5",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.26.2",
+    "react-markdown": "^9.1.0",
+    "react-router-dom": "^6.30.2",
     "react-slick": "^0.31.0",
     "react-syntax-highlighter": "^16.1.0",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sitemap": "^9.0.0",
