--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "firebase-admin": "^13.6.0",
     "googleapis": "^167.0.0",
     "lucide-react": "^0.454.0",
+    "pdfjs-dist": "^4.4.168",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.1.0",
     "react-router-dom": "^6.30.2",
