--- a/vercel.json
+++ b/vercel.json
@@ -4,68 +4,77 @@
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
   "framework": null,
-
+  
   "redirects": [
-    {
-      "source": "/(.*)",
-      "has": [
-        {
-          "type": "host",
-          "value": "www.bigyann.com.np"
-        }
-      ],
-      "destination": "https://bigyann.com.np/$1",
-      "statusCode": 301
-    },
-    {
-      "source": "/default",
-      "destination": "/",
-      "statusCode": 301
-    },
-    {
-      "source": "/blog/fm3g9qgx4JGycFGkc3M3",
-      "destination": "/blog/samsung-galaxy-a24-price-in-nepal",
-      "statusCode": 301
-    }
+  {
+  "source": "/default",
+  "destination": "/",
+  "statusCode": 301
+  },
+  {
+  "source": "/index.html",
+  "destination": "/",
+  "statusCode": 301
+  },
+  {
+  "source": "/(.*)",
+  "has": [
+  {
+  "type": "host",
+  "value": "https://www.google.com/search?q=www.bigyann.com.np"
+  }
   ],
-
+  "destination": "https://bigyann.com.np/$1",
+  "statusCode": 301
+  },
+  {
+  "source": "/blog/fm3g9qgx4JGycFGkc3M3",
+  "destination": "/blog/samsung-galaxy-a24-price-in-nepal",
+  "statusCode": 301
+  }
+  ],
+  
   "rewrites": [
-    {
-      "source": "/sitemap.xml",
-      "destination": "/sitemap.xml"
-    },
-    {
-      "source": "/robots.txt",
-      "destination": "/robots.txt"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+  {
+  "source": "/sitemap.xml",
+  "destination": "/sitemap.xml"
+  },
+  {
+  "source": "/robots.txt",
+  "destination": "/robots.txt"
+  },
+  {
+  "source": "/67d1343eb62d4fbfbaec1441dbb42efc.txt",
+  "destination": "/67d1343eb62d4fbfbaec1441dbb42efc.txt"
+  },
+  {
+  "source": "/(.*)",
+  "destination": "/index.html"
+  }
   ],
-
+  
   "headers": [
-    {
-      "source": "/sitemap.xml",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/xml; charset=utf-8"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, s-maxage=3600, stale-while-revalidate=60"
-        }
-      ]
-    },
-    {
-      "source": "/robots.txt",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/plain"
-        }
-      ]
-    }
+  {
+  "source": "/sitemap.xml",
+  "headers": [
+  {
+  "key": "Content-Type",
+  "value": "text/xml; charset=utf-8"
+  },
+  {
+  "key": "Cache-Control",
+  "value": "public, max-age=0, s-maxage=3600, stale-while-revalidate=60"
+  }
   ]
-}
+  },
+  {
+  "source": "/robots.txt",
+  "headers": [
+  {
+  "key": "Content-Type",
+  "value": "text/plain"
+  }
+  ]
+  }
+  ]
+  }
