refactor: cleanup gitignore and remove heavy build files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Dependencies
+node_modules/
+/pnpm-lock.yaml
+/package-lock.json
+/yarn.lock
+
+# Next.js Build Output
+.next/
+out/
+build/
+dist/
+
 # Logs
 logs
 *.log
@@ -7,18 +19,30 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# OS Files
+.DS_Store
+Thumbs.db
 
-# Editor directories and files
+# Environment Variables (Safety)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+
+# Vercel
+.vercel
+
+# Editor/IDE
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Testing
+/coverage
