--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "npm run build:sitemap && tsc && vite build",
-    "build:sitemap": "npx ts-node api/update-public-sitemap.ts",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "build:sitemap": "npx ts-node api/update-public-sitemap.ts"
   },
   "dependencies": {
     "@cloudflare/playwright": "^1.0.0",
@@ -21,13 +22,13 @@
     "firebase-admin": "^13.6.0",
     "googleapis": "^167.0.0",
     "lucide-react": "^0.454.0",
+    "next": "^16.1.1",
     "pdfjs-dist": "^4.4.168",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.1.0",
-    "react-router-dom": "^6.30.2",
     "react-slick": "^0.31.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.4",
@@ -44,13 +45,11 @@
     "@types/react-slick": "^0.23.13",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/blob": "^2.0.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "sitemap-ts": "^1.10.1",
     "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "vite": "^7.3.0"
+    "typescript": "^5.9.3"
   }
 }
