--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "devCommand": "npm run dev",
+  "framework": "nextjs",
   "redirects": [
     {
       "source": "/default",
