fix: Resolve @vercel/node TS error and update sitemap error handling

--- a/vercel.json
+++ b/vercel.json
@@ -47,7 +47,7 @@
         },
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, s-maxage=3600"
+          "value": "public, max-age=0, s-maxage=60, stale-while-revalidate=59"
         }
       ]
     },
