--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
+  "crons": [
+    {
+      "path": "/api/cron/autopilot",
+      "schedule": "0 */6 * * *"
+    }
+  ],
   "framework": "nextjs",
   "redirects": [
     {
