fix: Resolve @vercel/node TS error and update sitemap error handling

--- a/vercel.json
+++ b/vercel.json
@@ -30,7 +30,7 @@
     },
     {
       "source": "/2025/11/Yono-tv-live.html",
-      "destination": "/watch-yono-tv-online-free",
+      "destination": "/yono-tv-live-html",
       "statusCode": 301
     }
   ],
